// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<button
  className="button ui"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Default
</button>
`;

exports[`Storyshots Button Disabled 1`] = `
<button
  className="button disabled ui"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Disabled
</button>
`;

exports[`Storyshots Button Google 1`] = `
<button
  className="button ui google plus"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <i
    className="google icon"
  />
  Google
</button>
`;

exports[`Storyshots Button Icon 1`] = `
<button
  className="button ui twitter"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  <i
    className="twitter icon"
  />
  Twitter
</button>
`;

exports[`Storyshots Button Primary 1`] = `
<button
  className="button primary ui"
  disabled={false}
  onClick={[Function]}
  type="button"
>
  Primary
</button>
`;

exports[`Storyshots Button Primary Disabled 1`] = `
<button
  className="button disabled primary ui"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  Primary Disabled
</button>
`;

exports[`Storyshots Button Submit 1`] = `
<button
  className="button ui"
  disabled={false}
  onClick={[Function]}
  type="submit"
>
  Submit
</button>
`;

exports[`Storyshots Link Default 1`] = `
<a
  className="ant-typography"
  href=" "
  onClick={[Function]}
  style={
    Object {
      "WebkitLineClamp": null,
    }
  }
  target="_self"
>
  <u>
    Default
  </u>
</a>
`;

exports[`Storyshots Tag Colored 1`] = `
<span
  className="ant-tag ant-tag-blue"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Blue
</span>
`;

exports[`Storyshots Tag Default 1`] = `
<span
  className="ant-tag"
  style={
    Object {
      "backgroundColor": undefined,
    }
  }
>
  Default
</span>
`;
